# minecrevy-embedded

./: Cargo.toml  README.md  build.sh  check.sh  run.sh  rust-toolchain.toml
.cargo/: config.toml
bins/minecrevy-pico2w/: .env.sample  Cargo.toml  README.md  build.rs
bins/minecrevy-pico2w/.cargo/: config.toml
bins/minecrevy-pico2w/src/: main.rs
bins/minecrevy-std/: Cargo.toml  README.md
bins/minecrevy-std/src/: main.rs
crates/embassy-time-std/: Cargo.toml
crates/embassy-time-std/src/: lib.rs
crates/embedded-byteorder/: Cargo.toml  README.md
crates/embedded-byteorder/src/: io_async.rs  io_blocking.rs  lib.rs
crates/minecrevy-bytes/: Cargo.toml
crates/minecrevy-bytes/src/: io_async.rs  io_blocking.rs  lib.rs
crates/minecrevy-encdec/: Cargo.toml  README.md
crates/minecrevy-encdec-macros/: Cargo.toml
crates/minecrevy-encdec-macros/src/: lib.rs
crates/minecrevy-encdec/src/: error.rs  ext_async.rs  ext_blocking.rs  io_async.rs  io_blocking.rs  lib.rs  options.rs  size.rs
crates/minecrevy-encdec/src/io_async/: core.rs  heapless.rs
crates/minecrevy-encdec/src/size/: core.rs  heapless.rs
crates/minecrevy-log/: Cargo.toml
crates/minecrevy-log/src/: lib.rs
crates/minecrevy-net/: Cargo.toml
crates/minecrevy-net/src/: lib.rs
crates/minecrevy-protocol/: Cargo.toml  README.md
crates/minecrevy-protocol/src/: lib.rs  r769.rs
crates/minecrevy-protocol/src/r770/: handshake.rs  status.rs
src/: main.rs
