cargo-features = ["per-package-target"]

[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.dependencies]
# workspace
embedded-byteorder = { path = "crates/embedded-byteorder", default-features = false }
minecrevy-bytes = { path = "crates/minecrevy-bytes", default-features = false }
minecrevy-encdec = { path = "crates/minecrevy-encdec", default-features = false }
minecrevy-protocol = { path = "crates/minecrevy-protocol", default-features = false }
# external
byteorder = { version = "1.5.0", default-features = false }
cortex-m = { version = "0.7.6", default-features = false }
cortex-m-rt = { version = "0.7.0", default-features = false }
cyw43 = { git = "https://github.com/embassy-rs/embassy", rev = "f15a11f", default-features = true }
cyw43-pio = { git = "https://github.com/embassy-rs/embassy", rev = "f15a11f", default-features = true }
defmt = { version = "0.3.10", default-features = false }
defmt-rtt = { version = "0.4", default-features = false }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "f15a11f", default-features = true }
embassy-net = { git = "https://github.com/embassy-rs/embassy", rev = "f15a11f", default-features = true }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "f15a11f", default-features = true }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "f15a11f", default-features = true }
embedded-io = { version = "0.6.1", default-features = false }
embedded-io-async = { version = "0.6.1", default-features = false }
heapless = { version = "0.8.0", default-features = false }
panic-halt = { version = "1.0.0", default-features = false }
panic-probe = { version = "0.3", default-features = false }
static_cell = { version = "2.1", default-features = false }
thiserror = { version = "2.0.12", default-features = false }
uuid = { version = "1.16.0", default-features = false }

[package]
name = "minecrevy"
version = "0.1.0"
edition = "2024"
default-target = "thumbv8m.main-none-eabihf"

[dependencies]
# workspace
embedded-byteorder = { workspace = true }
minecrevy-bytes = { workspace = true }
minecrevy-encdec = { workspace = true }
minecrevy-protocol = { workspace = true }
# external 
cortex-m = { workspace = true, features = ["inline-asm"] }
cortex-m-rt = { workspace = true }
cyw43 = { workspace = true, features = ["defmt", "firmware-logs"] }
cyw43-pio = { workspace = true, features = ["defmt"] }
defmt = { workspace = true }
defmt-rtt = { workspace = true }
embassy-executor = { workspace = true, features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-net = { workspace = true, features = ["defmt", "tcp", "dhcpv4", "dhcpv4-hostname", "dns", "proto-ipv4", "medium-ethernet"] }
embassy-rp = { workspace = true, features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xa", "binary-info"] }
embassy-time = { workspace = true, features = ["defmt", "defmt-timestamp-uptime"] }
embedded-io-async = { workspace = true, features = ["defmt-03"] }
heapless = { workspace = true }
panic-halt = { workspace = true }
panic-probe = { workspace = true, default-features = true }
static_cell = { workspace = true }
thiserror = { workspace = true }

[[bin]]
name = "minecrevy"
path = "src/main.rs"
test = false
doctest = false
bench = false

[profile.release]
lto = true
opt-level = "s"
incremental = false
codegen-units = 1
# note: debug = true is okay - debuginfo isn't flashed to the device!
debug = true
