[workspace]
members = ["crates/*", "bins/*"]
resolver = "3"

[workspace.dependencies]
# workspace
embassy-time-std = { path = "crates/embassy-time-std", default-features = false }
embedded-byteorder = { path = "crates/embedded-byteorder", default-features = false }
minecrevy-encdec = { path = "crates/minecrevy-encdec", default-features = false }
minecrevy-encdec-macros = { path = "crates/minecrevy-encdec-macros", default-features = false }
minecrevy-protocol = { path = "crates/minecrevy-protocol", default-features = false }
# external
byteorder = { version = "1.5.0", default-features = false }
cortex-m = { version = "0.7.6", default-features = false }
cortex-m-rt = { version = "0.7.0", default-features = false }
crossbeam-channel = { version = "0.5.14", default-features = false }
cyw43 = { git = "https://github.com/embassy-rs/embassy", rev = "f15a11f", default-features = true }
cyw43-pio = { git = "https://github.com/embassy-rs/embassy", rev = "f15a11f", default-features = true }
defmt = { version = "0.3.10", default-features = false }
defmt-rtt = { version = "0.4", default-features = false }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "f15a11f", default-features = true }
embassy-net = { git = "https://github.com/embassy-rs/embassy", rev = "f15a11f", default-features = true }
embassy-net-driver = { git = "https://github.com/embassy-rs/embassy", rev = "f15a11f", default-features = true }
embassy-net-driver-channel = { git = "https://github.com/embassy-rs/embassy", rev = "f15a11f", default-features = true }
embassy-net-tuntap = { git = "https://github.com/embassy-rs/embassy", rev = "f15a11f", default-features = true }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "f15a11f", default-features = true }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "f15a11f", default-features = true }
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy", rev = "f15a11f", default-features = true }
embedded-io = { version = "0.6.1", default-features = false }
embedded-io-async = { version = "0.6.1", default-features = false }
heapless = { version = "0.8.0", default-features = false }
panic-halt = { version = "1.0.0", default-features = false }
panic-probe = { version = "0.3", default-features = false }
rand = { version = "0.9", default-features = false }
serde = { version = "1.0.219", default-features = false }
serde_json = { version = "1.0.140", default-features = false }
serde-json-core = { version = "0.6.0", default-features = false }
spin_sleep = { version = "1.3.1", default-features = false }
static_cell = { version = "2.1", default-features = false }
thiserror = { version = "2.0.12", default-features = false }
uuid = { version = "1.16.0", default-features = false }

[profile.release]
lto = true
opt-level = "s"
incremental = false
codegen-units = 1
# note: debug = true is okay - debuginfo isn't flashed to the device!
debug = true