[package]
name = "minecrevy-pico2w"
version = "0.1.0"
edition = "2024"

[dependencies]
# workspace
embedded-byteorder = { path = "../../crates/embedded-byteorder", default-features = false }
minecrevy-encdec = { path = "../../crates/minecrevy-encdec", default-features = false }
minecrevy-protocol = { path = "../../crates/minecrevy-protocol", default-features = false }
# external
cortex-m = { version = "0.7.6", default-features = false, features = ["inline-asm"] }
cortex-m-rt = { version = "0.7.0", default-features = false }
cyw43 = { git = "https://github.com/embassy-rs/embassy", rev = "f15a11f", default-features = false, features = ["defmt", "firmware-logs"] }
cyw43-pio = { git = "https://github.com/embassy-rs/embassy", rev = "f15a11f", default-features = false, features = ["defmt"] }
defmt = { version = "0.3.10", default-features = false }
defmt-rtt = { version = "0.4", default-features = false }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "f15a11f", default-features = false, features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-net = { git = "https://github.com/embassy-rs/embassy", rev = "f15a11f", default-features = false, features = ["defmt", "tcp", "dhcpv4", "dhcpv4-hostname", "dns", "proto-ipv4", "medium-ethernet"] }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "f15a11f", default-features = false, features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xa", "binary-info"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "f15a11f", default-features = false, features = ["defmt", "defmt-timestamp-uptime"] }
embedded-io-async = { version = "0.6.1", default-features = false, features = ["defmt-03"] }
heapless = { version = "0.8.0", default-features = false }
panic-halt = { version = "1.0.0", default-features = false }
panic-probe = { version = "0.3", default-features = true }
static_cell = { version = "2.1", default-features = false }
thiserror = { version = "2.0.12", default-features = false }

[build-dependencies]
dotenvy = "0.15.7"
