[package]
name = "minecrevy-encdec"
version = "0.1.0"
edition = "2024"

[dependencies]
# workspace
embedded-byteorder = { workspace = true }
minecrevy-encdec-macros = { workspace = true }
# external
defmt = { workspace = true }
heapless = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }