[package]
name = "minecrevy-protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
# workspace
embedded-byteorder = { workspace = true }
minecrevy-encdec = { workspace = true }
# external
defmt = { workspace = true }
heapless = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde-json-core = { workspace = true }
thiserror = { workspace = true }